# takuyamatsuoka_nhanes_gbr

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: analysis_pipeline.py  analysis_pipeline_quick.py  download_nhanes.py  generate_docx_tables.py  generate_figures.py  generate_flowchart.py  generate_forest_plot.py  generate_forest_plot_latter.py  generate_interaction_plot.py  generate_manuscript.py  generate_medrxiv_single_docx.py  generate_missingness_table.py  generate_rcs_plot.py  generate_specificity_plot.py  generate_strobe_checklist.py  generate_table_images.py  generate_tables.py  generate_tp_manuscript.py  generate_tp_race_figure.py  run_survey_regression.R  utils.py  verify_survey_se.R
